--- a/app/views/folders.xml
+++ b/app/views/folders.xml
@@ -23,6 +23,8 @@
 		       			switchLblStatus:text="{formatted}"
 						sensorLblStatus:text="{formatted}"
 						sensorSwitch:value="{formatted}"
+						sceneBtnOn:title="On"
+						sceneBtnOff:title="Off"
 					/>
         		</ListSection>
 				<RefreshControl id="refreshControlFav" platform="ios" onRefreshstart="refresh" />
@@ -109,7 +111,8 @@
 		       			switchLblStatus:text="{formatted}"
 						sensorLblStatus:text="{formatted}"
 						sensorSwitch:value="{formatted}"
-						searchableText="{displayName}"
+						sceneBtnOn:title="On"
+						sceneBtnOff:title="Off"
 					/>
         		</ListSection>
 				<RefreshControl id="refreshControlLight" platform="ios" onRefreshstart="refresh" />
@@ -195,7 +198,8 @@
 		       			switchLblStatus:text="{formatted}"
 						sensorLblStatus:text="{formatted}"
 						sensorSwitch:value="{formatted}"
-						searchableText="{displayName}"
+						sceneBtnOn:title="On"
+						sceneBtnOff:title="Off"
 					/>
         		</ListSection>
 				<RefreshControl id="refreshControlScene" platform="ios" onRefreshstart="refresh" />
@@ -280,8 +284,9 @@
 		       			slider:value="{value}" 
 		       			switchLblStatus:text="{formatted}"
 						sensorLblStatus:text="{formatted}"
-						sensorSwitch:value="{value}"
-						searchableText="{displayName}"
+						sensorSwitch:value="{formatted}"
+						sceneBtnOn:title="On"
+						sceneBtnOff:title="Off"
 					/>
         		</ListSection>
 				<RefreshControl id="refreshControlSensor" platform="ios" onRefreshstart="refresh" />
